# notes

.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace.json
.obsidian/plugins/3d-graph-new/: data.json
.obsidian/plugins/colored-tags/: data.json
.obsidian/plugins/obsidian-icon-folder/: data.json
.obsidian/plugins/obsidian-style-settings/: data.json
ASM/instructions/32/: mov-b-w-l-q
ASM/notes/basics/: basics  registers
ASM/notes/basics/conditions/: exe
ASM/notes/basics/exit-code/: flags
ASM/notes/basics/functions/: exe
ASM/notes/basics/generating-asm-from-c/: gcc-note
ASM/notes/basics/hello_world/: exe  hello.asm
ASM/notes/basics/loops/: exe
ASM/notes/sandbox/: exit.asm  run
MATH/Discrete/: What-Is-Discrete-Math.md
MATH/Discrete/Discrete-Structures/: Sets.md  What-are-Discrete-Structures.md
MATH/Discrete/Discrete-Structures/Sets/: Relation-between-Sets.md  Sets-definition.md
MATH/Number-theory/Number-systems/: Integers.md  Natural-numbers.md  Rational-numbers.md  Real-numbers.md
RUST/basic/: cargo
RUST/collections/string/: Cargo.toml
RUST/collections/vecDeque/: Cargo.toml
RUST/managing/re-exporting/: Cargo.toml
RUST/managing/re-exporting-multi-file/: Cargo.toml
Resources/WEB/: Asm.md  Linux-Graphics.md  Rust.md  Vulkan.md
TODO/: web.md
VULKAN/basics/: CMakeLists.txt  info.h.in
VULKAN/basics/src/: main.c
asm-notes/instructions/32/: j-e-g-ge-l-le-mp
asm-notes/notes/basics/: AT&T-syntax  directives
asm-notes/notes/lessbasics/: bare_metal_programs
(+31 files in other folders)
